--- a/res/layout/activity_open.xml
+++ b/res/layout/activity_open.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical">
+    <TextView android:id="@+id/current_folder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
 	<ListView android:id="@android:id/list"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"/>
-	<ProgressBar android:id="@+id/progress_wheel"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"/>
+	<Button android:id="@+id/open_button"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentRight="true"
-	    android:indeterminate="true"
-	    android:visibility="gone"/>
-	<TextView android:id="@+id/progress_text"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_toLeftOf="@id/progress_wheel"
-	    android:visibility="gone"/>
-</RelativeLayout>
+	    android:layout_gravity="bottom"
+	    android:text="@string/open_folder"/>
+</LinearLayout>
