--- a/res/layout/activity_open.xml
+++ b/res/layout/activity_open.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
-	<ListView android:id="@android:id/list"
+	<ListView android:id="@+id/list"
 	    android:layout_width="match_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="1"/>
