* Added sound support * Fixed the home grid view * Now the open activity has portrait & landscape * Now the main activity is gray like the wolf floor * Added cancel button to open activity * Added sprite support

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <GridView android:id="@+id/grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="auto_fit"
+        android:numColumns="4"
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"/>
 
