--- a/res/layout/activity_open_portrait.xml
+++ b/res/layout/activity_open_portrait.xml
@@ -15,9 +15,24 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="1"/>
-	<Button android:id="@+id/open_button"
-	    android:layout_width="wrap_content"
+	<HorizontalScrollView android:id="@+id/button_scroll"
+	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_gravity="bottom"
-	    android:text="@string/open_folder"/>
+	    android:layout_gravity="bottom">
+	    <LinearLayout 
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:orientation="horizontal">
+	        <Button android:id="@+id/open_button"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/open_folder"/>
+	        <Button android:id="@+id/cancel_button"
+	            android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/cancel"/>
+	    </LinearLayout>
+	    
+	</HorizontalScrollView>
+	
 </LinearLayout>
