--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,17 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
+    <RelativeLayout android:id="@+id/toolbar_holder"
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+        <TextView android:id="@+id/level_name_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:textSize="18sp"/>
+        <ImageButton android:id="@+id/prev_level_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_action_previous_item"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="58dp"/>
+        <ImageButton android:id="@+id/next_level_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_action_next_item"
+            android:layout_alignParentRight="true"/>
+        
+    </RelativeLayout>
     
-    <ScrollView android:id="@+id/vertical_scroll"
+    <com.ichera.wolfviewer.ui.VXScrollView android:id="@+id/vertical_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <HorizontalScrollView android:id="@+id/horizontal_scroll"
+        <com.ichera.wolfviewer.ui.HXScrollView android:id="@+id/horizontal_scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.GridLayout android:id="@+id/grid_layout"
@@ -19,8 +38,8 @@
 		        android:layout_height="match_parent"
 		        android:columnCount="64"
 		        android:rowCount="64"/>
-        </HorizontalScrollView>
-    </ScrollView>
+        </com.ichera.wolfviewer.ui.HXScrollView>
+    </com.ichera.wolfviewer.ui.VXScrollView>
     
     
     <!-- 
@@ -31,4 +50,4 @@
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"/>
 	-->
-</RelativeLayout>
+</LinearLayout>
