--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,11 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/action_prev"
+        android:title="@string/action_prev"
+        android:alphabeticShortcut="p"
+        yourapp:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_previous_item"/>
+    <item android:id="@+id/action_next"
+        android:title="@string/action_next"
+        android:alphabeticShortcut="p"
+        yourapp:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_next_item"/>
 	<item android:id="@+id/action_open"
 	    android:title="@string/action_open"
 	    android:alphabeticShortcut="o"
