--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,11 +10,9 @@
         <com.ichera.wolfviewer.ui.HXScrollView android:id="@+id/horizontal_scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.GridLayout android:id="@+id/grid_layout"
-		        android:layout_width="wrap_content"
-		        android:layout_height="match_parent"
-		        android:columnCount="64"
-		        android:rowCount="64"/>
+            <RelativeLayout android:id="@+id/grid_layout"
+		        android:layout_width="0dp"
+		        android:layout_height="0dp"/>
         </com.ichera.wolfviewer.ui.HXScrollView>
     </com.ichera.wolfviewer.ui.VXScrollView>
     
