--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,19 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
 
-    <item android:id="@+id/action_prev"
-        android:title="@string/action_prev"
-        android:alphabeticShortcut="p"
-        yourapp:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_previous_item"/>
-    <item android:id="@+id/action_next"
-        android:title="@string/action_next"
-        android:alphabeticShortcut="p"
-        yourapp:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_next_item"/>
+    
 	<item android:id="@+id/action_open"
 	    android:title="@string/action_open"
 	    android:alphabeticShortcut="o"
 	    yourapp:showAsAction="ifRoom"
 	    android:icon="@drawable/ic_action_collection"/>
+	<!-- 
+	<item android:id="@+id/test1"
+	    android:title="test1"
+	    yourapp:showAsAction="ifRoom"/>
+	
+	<item android:id="@+id/test2"
+	    android:title="test2"
+	    yourapp:showAsAction="ifRoom"/>
+	     -->
 </menu>
