--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     <com.ichera.wolfviewer.ui.VXScrollView android:id="@+id/vertical_scroll"
@@ -13,6 +13,17 @@
 		        android:layout_height="0dp"/>
         </com.ichera.wolfviewer.ui.HXScrollView>
     </com.ichera.wolfviewer.ui.VXScrollView>
-    
+    <LinearLayout android:id="@+id/left_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_gravity="left"
+        android:padding="10dp"
+        android:clickable="true">
+        <ListView android:id="@+id/wall_list"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"/>
+        
+    </LinearLayout>
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout >
