Added level undo, and fixed inconsistencies between Android versions/skins.

--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -22,7 +22,8 @@
         android:clickable="true">
         <ListView android:id="@+id/wall_list"
             android:layout_width="48dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent"/>
         
     </LinearLayout>
 
