--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -18,7 +18,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textColor="@android:color/black"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="48dp"
