Work on the startup fragment

--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -20,6 +20,15 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textColor="@android:color/black"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:layout_below="@id/titleView"
+        android:background="@android:color/black"
+        android:layout_above="@+id/progress_indicator"/>
+
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="48dp"
@@ -30,8 +39,10 @@
     <ProgressBar android:id="@+id/progress_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
         android:indeterminate="true"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
 </RelativeLayout>
