Enhanced the look of the starting fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <color name="floor">#ff717171</color>
+    <color name="highgrey">#80ffffff</color>
+    <color name="lowgrey">#80000000</color>
 
 </resources>
