--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/titleView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:text="@string/welcome"
         android:gravity="center"
         android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:background="@drawable/bright_gradient"/>
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_below="@id/titleView"
-        android:background="@android:color/black"
-        android:layout_above="@+id/open_button"/>
+        android:background="@color/lowgrey"
+        android:layout_above="@+id/open_button_container"/>
 
-    <Button
-        android:id="@id/open_button"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="@string/open_levels"
+    <FrameLayout
+        android:id="@id/open_button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:background="@drawable/dark_gradient">
+
+        <Button
+            android:id="@id/open_button"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="@string/open_levels"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"/>
+
+        </FrameLayout>
 
 </RelativeLayout>
