--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     
     <dimen name="button_touchable">48dp</dimen>
+    <dimen name="standard_space">20dp</dimen>
 
 </resources>
