Simplified the code quite a bit... unfortunately there still needs to be a more persistent document instance than the activity allows.

--- a/app/src/main/res/layout/fragment_file_open.xml
+++ b/app/src/main/res/layout/fragment_file_open.xml
@@ -25,7 +25,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/pathView"
+        android:layout_above="@+id/open_button_container"
         android:background="@drawable/dark_gradient"/>
+    <FrameLayout
+        android:id="@id/open_button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bright_gradient">
 
+        <Button
+            android:id="@id/open_button"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/button_touchable"
+            android:text="@string/open_levels"
+            android:layout_marginTop="@dimen/standard_space"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/standard_space"
+            android:minWidth="200dp"/>
+
+    </FrameLayout>
 
 </RelativeLayout>
