--- a/app/src/main/res/drawable/bright_gradient.xml
+++ b/app/src/main/res/drawable/bright_gradient.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <gradient android:angle="270"
-    android:startColor="@color/highgrey"
+    android:startColor="@color/grey_high"
     android:endColor="@android:color/transparent"/>
 </shape>
