--- a/app/src/main/res/drawable/dark_gradient.xml
+++ b/app/src/main/res/drawable/dark_gradient.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="270"
-        android:endColor="@color/lowgrey"
+        android:endColor="@color/grey_low"
         android:startColor="@android:color/transparent"/>
 </shape>
