--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -20,6 +20,8 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/floor_translucent"
 	        android:layout_alignParentBottom="true"
 	        android:text="@string/scroll_lock"/>
     </RelativeLayout>
@@ -28,9 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:padding="10dp"
-        android:clickable="true">
+        android:clickable="true"
+        android:background="@color/floor">
         <ListView android:id="@+id/wall_list"
             android:layout_width="48dp"
             android:layout_height="match_parent"
