* Fixed level redo behaviour
* Undo and redo buttons in level fragment
* Buttons now get shaded when pressed
* Code style settings added to project

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="floor">#ff717171</color>
     <color name="floor_translucent">#c8717171</color>
+    <color name="floor_translucent_pressed">#c8555555</color>
     <color name="grey_high">#80ffffff</color>
     <color name="grey_low">#80000000</color>
 
