--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -21,9 +21,29 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:background="@color/floor_translucent"
+            android:background="@drawable/floor_translucent_pressable"
 	        android:layout_alignParentBottom="true"
 	        android:text="@string/scroll_lock"/>
+        <ImageView
+            android:id="@+id/button_undo"
+            android:layout_width="@dimen/button_touchable"
+            android:layout_height="@dimen/button_touchable"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/floor_translucent_pressable"
+            android:src="@drawable/ic_darkaction_undo"
+            android:contentDescription="@string/content_description_undo"/>
+        <ImageView
+            android:id="@+id/button_redo"
+            android:layout_width="@dimen/button_touchable"
+            android:layout_height="@dimen/button_touchable"
+            android:layout_toRightOf="@id/button_undo"
+            android:layout_toEndOf="@id/button_undo"
+            android:layout_alignBottom="@id/button_undo"
+            android:background="@drawable/floor_translucent_pressable"
+            android:src="@drawable/ic_darkaction_redo"
+            android:contentDescription="@string/content_description_redo"/>
     </RelativeLayout>
     
     <LinearLayout android:id="@+id/left_drawer"
