* Now the left drawer's open/closed state is saved between rotations
* Fix LevelFragment state arg names
* Deleted obsolete resources
* Started a drawer menu at the left of the tile selector

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,8 @@
     
     <dimen name="button_touchable">48dp</dimen>
     <dimen name="standard_space">20dp</dimen>
+    <dimen name="drawer_menu_width">128dp</dimen>
 
+    <dimen name="drawer_menu_item_padding">8dp</dimen>
+    <dimen name="drawer_menu_item_drawable_padding">8dp</dimen>
 </resources>
