--- a/app/src/main/res/layout/fragment_file_open.xml
+++ b/app/src/main/res/layout/fragment_file_open.xml
@@ -16,10 +16,12 @@
         android:id="@+id/upButton"
         android:layout_width="@dimen/button_touchable"
         android:layout_height="@dimen/button_touchable"
+        android:layout_alignStart="@id/pathView"
         android:layout_alignLeft="@id/pathView"
         android:layout_alignTop="@id/pathView"
         android:src="@drawable/ic_action_back"
-        android:scaleType="centerInside"/>
+        android:scaleType="centerInside"
+        android:contentDescription="@string/action_up_one_level"/>
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
@@ -35,7 +37,7 @@
         android:background="@drawable/bright_gradient">
 
         <Button
-            android:id="@id/open_button"
+            android:id="@+id/open_button"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/button_touchable"
             android:text="@string/open_levels"
