--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -53,12 +53,18 @@
         android:layout_gravity="start"
         android:padding="10dp"
         android:clickable="true"
-        android:background="@color/floor">
-        <ListView android:id="@+id/wall_list"
-            android:layout_width="48dp"
+        android:background="@color/floor_translucent">
+        <ListView
+            android:id="@+id/drawer_menu"
+            android:layout_width="@dimen/drawer_menu_width"
             android:layout_height="match_parent"
             android:cacheColorHint="@android:color/transparent"/>
-        
+        <ListView
+            android:id="@+id/wall_list"
+            android:layout_width="@dimen/button_touchable"
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent"/>
+
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout >
