* Started work on the editor menu
* Moved some dimensions into resources

--- a/app/src/main/res/layout/fragment_level_menu.xml
+++ b/app/src/main/res/layout/fragment_level_menu.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="@dimen/drawer_padding"
     android:clickable="true"
     android:background="@color/floor_translucent">
     <ListView
