* Updated Android SDK target * Started work on overlapped wall/object and floor codes

--- a/app/src/main/res/layout/fragment_file_open.xml
+++ b/app/src/main/res/layout/fragment_file_open.xml
@@ -28,7 +28,8 @@
         android:layout_height="match_parent"
         android:layout_below="@id/pathView"
         android:layout_above="@+id/open_button_container"
-        android:background="@drawable/dark_gradient"/>
+        android:background="@drawable/dark_gradient"
+        android:cacheColorHint="@android:color/transparent"/>
     <FrameLayout
         android:id="@id/open_button_container"
         android:layout_width="match_parent"
