--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="cyan">#ff00ffff</color>
     <color name="floor">#ff717171</color>
     <color name="floor_translucent">#c8717171</color>
     <color name="floor_translucent_pressed">#c8555555</color>
     <color name="grey_high">#80ffffff</color>
     <color name="grey_low">#80000000</color>
+
 
 </resources>
